--- a/TechLead_SGE/TechLead_SGE.Client/index.html
+++ b/TechLead_SGE/TechLead_SGE.Client/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q10 | TECH LEAD SGE</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="TechLead_SGE.Client"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
